--- a/BlogPost.html
+++ b/BlogPost.html
@@ -6,7 +6,11 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Aqui vamos a hacer un Blog</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo nuevo del post</h1>
+                <p>En este parrafo de se va a explicar los nuevos elementos</p>
+            </div>
+        </div>
     </body>
 </html>
