--- a/BlogPost.html
+++ b/BlogPost.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Este es el titulo nuevo del post</h1>
                 <p>En este parrafo de se va a explicar los nuevos elementos</p>
