--- a/BlogPost.html
+++ b/BlogPost.html
@@ -8,7 +8,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <spam id="tagline">tu blog de confianza</spam>
             </div>
             <div id="post">
                 <h1>Este es el titulo nuevo del post</h1>
