--- a/BlogPost.html
+++ b/BlogPost.html
@@ -10,6 +10,7 @@
             <div id="post">
                 <h1>Este es el titulo nuevo del post</h1>
                 <p>En este parrafo de se va a explicar los nuevos elementos</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
             </div>
         </div>
     </body>
