Se realizan cambios de color en el body

--- a/BlogPost.html
+++ b/BlogPost.html
@@ -9,7 +9,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <spam id="tagline">tu blog de confianza</spam>
+                <spam id="tagline">tu blog de cabecera</spam>
             </div>
             <div id="post">
                 <h1>Este es el titulo nuevo del post</h1>
