--- a/BlogPost.html
+++ b/BlogPost.html
@@ -9,12 +9,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <spam id="tagline">tu blog de confianza</spam>
+                <spam id="tagline">tu blog maestro</spam>
             </div>
             <div id="post">
                 <h1>Este es el titulo nuevo del post</h1>
                 <p>En este parrafo de se va a explicar los nuevos elementos</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
