Se cambia el titulo del blog
Se cambia el titulo del blog

--- a/BlogPost.html
+++ b/BlogPost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            El Titulo del Post
+            Bienvenido aHyperBlog
         </title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
