--- a/BlogPost.html
+++ b/BlogPost.html
@@ -8,6 +8,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/tesla-motors-logo.png" />
                 Hyperblog
                 <spam id="tagline">tu blog maestro</spam>
             </div>
