--- a/BlogPost.html
+++ b/BlogPost.html
@@ -15,6 +15,7 @@
             <div id="post">
                 <h1>Este es el titulo nuevo del post</h1>
                 <p>En este parrafo de se va a explicar los nuevos elementos</p>
+                <p><img id="team" src="imagenes/tesla-roadster-design-team-franz.jpg" width="100%" height="100%"></p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
                 <p>Suscribete y dale like</p>
             </div>
